--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "http-server": "^13.0.1"
+    "http-server": "^13.0.1",
+    "mongoose": "^6.2.6"
   },
   "repository": {
     "type": "git",
