--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "http-server": "^13.0.1",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "repository": {
     "type": "git",
