--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "http-server": "^13.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "mongoose-unique-validator": "^3.0.0"
   },
